--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "agent_smith"]
 	path = agent_smith
 	url = https://github.com/mil-tokyo/agent_smith.git
+
+[submodule "demo/trinity"]
+        path = demo/trinity
+        url = git@github.com:mil-tokyo/trinity.git
